finish up the archiver